# atlas-agent-runtime

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  bitbucket-pipelines.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml
.trunk/: trunk.yaml
agents/: regdoc-qa-mock.yaml  regdoc-qa.yaml
alembic/: env.py
alembic/versions/: 0001_initial_agent_schema.py
app/: __init__.py  config.py  main.py
app/agentspec/: __init__.py  model.py
app/api/: __init__.py  deps.py  routes.py  schemas.py
app/gateway_client/: __init__.py  http_client.py
app/loop/: __init__.py  errors.py  gateway_client.py  runner.py
app/persistence/: __init__.py  base.py  dal.py  session.py  tables.py
app/services/: __init__.py  run_service.py
app/telemetry/: __init__.py  tracing.py
app/tools/: __init__.py
deploy/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-stage.yaml  values.yaml
deploy/templates/: NOTES.txt  _helpers.tpl  analysistemplate.yaml  deployment.yaml  hpa.yaml  poddisruptionbudget.yaml  rollout.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/diagrams/: agent-loop-class.puml  agent-run-state.md  component-c4.md  (+2 more)
scripts/: README.md  build.sh  ci.sh  demo_regdoc_agent.py  docker.sh  export_openapi.py  infra.sh  local.sh  test.sh
tests/: test_agentspec.py  test_api.py  test_api_runs.py  test_dal.py  test_http_gateway_client.py  test_integration.py  test_loop.py  test_openapi_contract.py  test_registry.py  test_sanitizer.py  test_schema.py  test_telemetry.py
(+8 files in other folders)
