[project]
name = "atlas-agent-runtime"
version = "0.1.0"
description = "Atlas hand-rolled thin agent loop — asyncio engine for YAML-defined agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.50",
    "alembic==1.18.4",
    "psycopg[binary]==3.3.4",
    "pyyaml==6.0.2",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "opentelemetry-api==1.33.0",
    "opentelemetry-sdk==1.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.9.6",
    "pyright==1.1.394",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
